Added redis hash testing
